--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -42,7 +42,12 @@ $gray-dark-level-13: #181818;
 $tinted-gray-light-level-1: #c9d1d9;
 $tinted-gray-light-level-2: #bfc8d1;
 $tinted-gray-light-level-3: #b7c1ca;
-$tinted-gray-light-level-4: #a9b3bb;
+$tinted-gray-light-level-4: #b2bbc4;
+$tinted-gray-light-level-5: #a9b3bb;
+$tinted-gray-light-level-6: #9ca5ac;
+$tinted-gray-light-level-7: #8f989e;
+$tinted-gray-light-level-8: #868e94;
+$tinted-gray-light-level-9: #80878d;
 // Basic blues
 $basic-blue-level-1: #0000ff;
 // Baby blues
@@ -106,10 +111,12 @@ $raspberry-red-level-2: #d44141;
 $yellow-level-1: #ffff00;
 
 // Light/Dark mode (General)
-$mode-home-background-color-light: white;
-$mode-home-background-color-dark: $gray-dark-level-7;
-$mode-home-text-color-light: black;
-$mode-home-text-color-dark: $tinted-gray-light-level-4;
+$mode-base-background-color-light: white;
+$mode-base-background-color-dark: $gray-dark-level-7;
+$mode-base-primary-text-color-light: black;
+$mode-base-primary-text-color-dark: $tinted-gray-light-level-2;
+$mode-base-secondary-text-color-light: $gray-dark-level-5;
+$mode-base-secondary-text-color-dark: $tinted-gray-light-level-4;
 $mode-backend-errors-text-color-light: $basic-red-level-1;
 $mode-backend-errors-text-color-dark: $fiery-red-level-1;
 $mode-char-count-limit-reached-text-color-light: $mode-backend-errors-text-color-light;
@@ -126,12 +133,12 @@ $mode-base-icon-button-hover-text-color-light: $gray-dark-level-5;
 $mode-base-icon-button-hover-text-color-dark: $gray-level-1;
 $mode-custom-checkbox-border-color-light: black;
 $mode-custom-checkbox-border-color-dark: $gray-level-1;
-$mode-custom-checkbox-background-color-light: $mode-home-background-color-light;
-$mode-custom-checkbox-background-color-dark: $mode-home-background-color-dark;
+$mode-custom-checkbox-background-color-light: $mode-base-background-color-light;
+$mode-custom-checkbox-background-color-dark: $mode-base-background-color-dark;
 $mode-custom-checkbox-hover-border-color-light: $carolina-blue-level-4;
 $mode-custom-checkbox-hover-border-color-dark: $carolina-blue-level-1;
-$mode-custom-checkmark-text-color-light: $mode-home-text-color-light;
-$mode-custom-checkmark-text-color-dark: $mode-home-text-color-dark;
+$mode-custom-checkmark-text-color-light: $mode-base-primary-text-color-light;
+$mode-custom-checkmark-text-color-dark: $mode-base-primary-text-color-dark;
 $mode-custom-checkmark-hover-text-color-light: $mode-custom-checkbox-hover-border-color-light;
 $mode-custom-checkmark-hover-text-color-dark: $mode-custom-checkbox-hover-border-color-dark;
 $mode-toggle-switch-on-background-color-light: $carolina-blue-level-4;
@@ -162,18 +169,18 @@ $mode-top-bar-border-color-light: black;
 $mode-top-bar-border-color-dark: black;
 $mode-top-bar-background-color-light: $gray-light-level-5;
 $mode-top-bar-background-color-dark: $gray-dark-level-11;
-$mode-top-bar-button-border-color-light: $mode-home-text-color-light;
+$mode-top-bar-button-border-color-light: $mode-base-primary-text-color-light;
 $mode-top-bar-button-border-color-dark: $gray-level-1;
-$mode-top-bar-button-background-color-light: $mode-home-background-color-light;
+$mode-top-bar-button-background-color-light: $mode-base-background-color-light;
 $mode-top-bar-button-background-color-dark: $gray-dark-level-5;
-$mode-top-bar-button-text-color-light: $mode-home-text-color-light;
-$mode-top-bar-button-text-color-dark: $mode-home-text-color-dark;
-$mode-top-bar-search-bar-background-color-light: $mode-home-background-color-light;
+$mode-top-bar-button-text-color-light: $mode-base-primary-text-color-light;
+$mode-top-bar-button-text-color-dark: $mode-base-primary-text-color-dark;
+$mode-top-bar-search-bar-background-color-light: $mode-base-background-color-light;
 $mode-top-bar-search-bar-background-color-dark: $gray-dark-level-6;
-$mode-top-bar-search-bar-text-color-light: $mode-home-text-color-light;
-$mode-top-bar-search-bar-text-color-dark: $mode-home-text-color-dark;
-$mode-account-sidebar-modal-background-color-light: $mode-home-background-color-light;
-$mode-account-sidebar-modal-background-color-dark: $mode-home-background-color-dark;
+$mode-top-bar-search-bar-text-color-light: $mode-base-primary-text-color-light;
+$mode-top-bar-search-bar-text-color-dark: $mode-base-primary-text-color-dark;
+$mode-account-sidebar-modal-background-color-light: $mode-base-background-color-light;
+$mode-account-sidebar-modal-background-color-dark: $mode-base-background-color-dark;
 $mode-account-sidebar-logout-button-hover-background-color-light: $gray-light-level-1;
 $mode-account-sidebar-logout-button-hover-background-color-dark: $gray-dark-level-5;
 $mode-account-modal-delete-account-capital-delete-text-color-light: $mode-backend-errors-text-color-light;
@@ -184,8 +191,8 @@ $mode-account-modal-delete-account-form-delete-button-background-color-light: $r
 $mode-account-modal-delete-account-form-delete-button-background-color-dark: $faded-red-level-4;
 $mode-account-modal-delete-account-form-delete-button-hover-background-color-light: $raspberry-red-level-2;
 $mode-account-modal-delete-account-form-delete-button-hover-background-color-dark: $faded-red-level-6;
-$mode-create-item-sidebar-background-color-light: $mode-home-background-color-light;
-$mode-create-item-sidebar-background-color-dark: $mode-home-background-color-dark;
+$mode-create-item-sidebar-background-color-light: $mode-base-background-color-light;
+$mode-create-item-sidebar-background-color-dark: $mode-base-background-color-dark;
 $mode-create-item-sidebar-form-disabled-background-color-light: $mode-create-item-sidebar-background-color-light;
 $mode-create-item-sidebar-form-disabled-background-color-dark: $mode-create-item-sidebar-background-color-dark;
 $mode-create-item-sidebar-form-disabled-text-color-light: $gray-light-level-10;
@@ -198,10 +205,10 @@ $mode-list-row-selected-background-color-light: $gray-light-level-6;
 $mode-list-row-selected-background-color-dark: $gray-dark-level-3;
 $mode-list-header-box-shadow-light: 0 1px 0 $mode-list-row-border-color-light;
 $mode-list-header-box-shadow-dark: 0 1px 0 $mode-list-row-border-color-dark;
-$mode-list-header-background-color-light: $mode-home-background-color-light;
-$mode-list-header-background-color-dark: $mode-home-background-color-dark;
-$mode-delete-modal-background-color-light: $mode-home-background-color-light;
-$mode-delete-modal-background-color-dark: $mode-home-background-color-dark;
+$mode-list-header-background-color-light: $mode-base-background-color-light;
+$mode-list-header-background-color-dark: $mode-base-background-color-dark;
+$mode-delete-modal-background-color-light: $mode-base-background-color-light;
+$mode-delete-modal-background-color-dark: $mode-base-background-color-dark;
 $mode-delete-modal-delete-button-background-color-light: $mode-account-modal-delete-account-form-delete-button-background-color-light;
 $mode-delete-modal-delete-button-background-color-dark: $mode-account-modal-delete-account-form-delete-button-background-color-dark;
 $mode-delete-modal-delete-button-hover-background-color-light: $mode-account-modal-delete-account-form-delete-button-hover-background-color-light;
@@ -232,8 +239,8 @@ $mode-item-view-list-sidebar-expand-minimize-button-hover-background-color-light
 $mode-item-view-list-sidebar-expand-minimize-button-hover-background-color-dark: $gray-dark-level-11;
 $mode-item-view-form-input-border-color-light: black;
 $mode-item-view-form-input-border-color-dark: black;
-$mode-item-view-form-input-background-color-light: $mode-home-background-color-light;
-$mode-item-view-form-input-background-color-dark: $mode-home-background-color-dark;
+$mode-item-view-form-input-background-color-light: $mode-base-background-color-light;
+$mode-item-view-form-input-background-color-dark: $mode-base-background-color-dark;
 $mode-item-view-form-disabled-background-color-light: $mode-top-bar-background-color-light;
 $mode-item-view-form-disabled-background-color-dark: $mode-top-bar-background-color-dark;
 $mode-item-view-form-disabled-text-color-light: $mode-create-item-sidebar-form-disabled-text-color-light;
@@ -244,8 +251,8 @@ $mode-item-view-form-cancel-button-hover-background-color-light: $gray-light-lev
 $mode-item-view-form-cancel-button-hover-background-color-dark: $gray-dark-level-3;
 $mode-item-view-comment-box-individual-comment-icon-button-text-color-light: $gray-level-6;
 $mode-item-view-comment-box-individual-comment-icon-button-text-color-dark: $gray-level-4;
-$mode-item-view-comment-box-individual-comment-icon-button-hover-text-color-light: $mode-home-text-color-light;
-$mode-item-view-comment-box-individual-comment-icon-button-hover-text-color-dark: $mode-home-text-color-dark;
+$mode-item-view-comment-box-individual-comment-icon-button-hover-text-color-light: $mode-base-primary-text-color-light;
+$mode-item-view-comment-box-individual-comment-icon-button-hover-text-color-dark: $mode-base-primary-text-color-dark;
 
 // Themes
 $theme-brighter-border-background-color-blue-turkish: $turkish-blue-light-level-2;
@@ -408,7 +415,7 @@ $edit-item-name-input-padding: 4px;
 // Text
 //======
 $base-font-size: 15px;
-$slightly-larger-font-size: $base-font-size + 1px;
+$slightly-larger-font-size: $base-font-size + 1;
 $navbar-button-font-size: 18px;
 $account-sidebar-account-name-font-size: 18px;
 $account-sidebar-account-info-font-size: 15px;
@@ -421,7 +428,7 @@ $top-bar-search-bar-button-icon-font-size: 14px;
 $top-bar-button-font-size: 14px;
 $top-bar-filter-button-font-size: $top-bar-button-font-size;
 $filter-dropdown-content-font-size: 14px;
-$list-container-empty-list-message-font-size: 32px;
+$list-view-empty-list-message-font-size: 32px;
 $item-view-name-font-size: 28px;
 $create-item-sidebar-label-font-size: 15px;
 $item-form-text-input-font-size: 13px;
