Added secondary base text color to ItemView

--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemView.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemView.scss
@@ -99,6 +99,7 @@
 		display: block;
 		padding: 13px 5px 13px 5px;
 		line-height: v.$common-line-height;
+		color: v.$mode-base-secondary-text-color-light;
 	}
 
 	.item-box__group {
