--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewBugListTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewBugListTableAndRows.scss
@@ -15,6 +15,7 @@
 	.bug-list-table__row {
 		padding: 5px;
 		height: v.$list-row-height;
+		color: v.$mode-base-secondary-text-color-light;
 		text-align: center;
 	}
 
