--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewBugListTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewBugListTableAndRows.scss
@@ -22,24 +22,21 @@
 	.bug-list-table__data {
 		// Must be realtive so centing works for overflow-container
 		position: relative;
+		width: 50%;
 	}
 
-	.bug-list-table__data__overflow-container {
-		@include m.horizontal-center();
-
-		width: 50px;
-		// Changed using JS
-		max-width: 50px;
+	.bug-list-table__data--overflow {
+		max-width: 0;
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
 	}
 
-	.bug-list-table__data__overflow-container--completed-color {
+	.bug-list-table__data--completed-color {
 		color: v.$status-green;
 	}
 
-	.bug-list-table__data__overflow-container__info__completed-icon {
+	.bug-list-table__data__info__completed-icon {
 		margin-right: 5px;
 		color: v.$status-green;
 	}
@@ -60,7 +57,7 @@
 		background-color: black;
 		color: white;
 		height: v.$status-box-height;
-		width: 100%;
+		width: 150px;
 	}
 
 	.bug-list-table__data__centering-container__status-box__centered-info {
