--- a/client/src/CSS/scss_partials/_app.scss
+++ b/client/src/CSS/scss_partials/_app.scss
@@ -193,38 +193,6 @@ body {
 		color: v.$mode-base-primary-text-color-dark;
 	}
 
-	// Light/Dark mode -- TopBar -- border and background colors
-	.js-set-top-bar-border-and-background-color-dark-mode-false {
-		border-color: v.$mode-top-bar-border-color-light;
-		background-color: v.$mode-top-bar-background-color-light;
-	}
-	.js-set-top-bar-border-and-background-color-dark-mode-true {
-		border-color: v.$mode-top-bar-border-color-dark;
-		background-color: v.$mode-top-bar-background-color-dark;
-	}
-
-	// Light/Dark mode -- TopBar buttons -- border, background, and text color
-	.js-set-top-bar-button-border-background-text-color-dark-mode-false {
-		border-color: v.$mode-top-bar-button-border-color-light;
-		background-color: v.$mode-top-bar-button-background-color-light;
-		color: v.$mode-top-bar-button-text-color-light;
-	}
-	.js-set-top-bar-button-border-background-text-color-dark-mode-true {
-		border-color: v.$mode-top-bar-button-border-color-dark;
-		background-color: v.$mode-top-bar-button-background-color-dark;
-		color: v.$mode-top-bar-button-text-color-dark;
-	}
-
-	// Light/Dark mode -- TopBar search-bar -- background and text colors
-	.js-set-top-bar-search-bar-background-text-color-dark-mode-false {
-		background-color: v.$mode-top-bar-search-bar-background-color-light;
-		color: v.$mode-top-bar-search-bar-text-color-light;
-	}
-	.js-set-top-bar-search-bar-background-text-color-dark-mode-true {
-		background-color: v.$mode-top-bar-search-bar-background-color-dark;
-		color: v.$mode-top-bar-search-bar-text-color-dark;
-	}
-
 	// Light/Dark mode -- AccountSidebar and AccountModal -- background colors
 	.js-set-account-sidebar-modal-background-color-dark-mode-false {
 		background-color: v.$mode-account-sidebar-modal-background-color-light;
@@ -293,6 +261,62 @@ body {
 		&:focus {
 			background-color: v.$mode-account-modal-delete-account-form-delete-button-hover-background-color-dark;
 		}
+	}
+
+	// Light/Dark mode -- AccountModalChangeSettings category container -- border, background, text color
+	.js-set-account-modal-change-settings-category-container-border-background-text-color-dark-mode-false {
+		border-color: v.$mode-account-modal-change-settings-category-container-border-color-light;
+
+		& > .category-container__heading {
+			background-color: v.$mode-base-background-color-light;
+		}
+
+		& > .category-container__content-container > label {
+			color: v.$mode-base-secondary-text-color-light
+		}
+	}
+	.js-set-account-modal-change-settings-category-container-border-background-text-color-dark-mode-true {
+		border-color: v.$mode-account-modal-change-settings-category-container-border-color-dark;
+
+		& > .category-container__heading {
+			background-color: v.$mode-base-background-color-dark;
+		}
+
+		& > .category-container__content-container > label {
+			color: v.$mode-base-secondary-text-color-dark
+		}
+	}
+
+	// Light/Dark mode -- TopBar -- border and background colors
+	.js-set-top-bar-border-and-background-color-dark-mode-false {
+		border-color: v.$mode-top-bar-border-color-light;
+		background-color: v.$mode-top-bar-background-color-light;
+	}
+	.js-set-top-bar-border-and-background-color-dark-mode-true {
+		border-color: v.$mode-top-bar-border-color-dark;
+		background-color: v.$mode-top-bar-background-color-dark;
+	}
+
+	// Light/Dark mode -- TopBar buttons -- border, background, and text color
+	.js-set-top-bar-button-border-background-text-color-dark-mode-false {
+		border-color: v.$mode-top-bar-button-border-color-light;
+		background-color: v.$mode-top-bar-button-background-color-light;
+		color: v.$mode-top-bar-button-text-color-light;
+	}
+	.js-set-top-bar-button-border-background-text-color-dark-mode-true {
+		border-color: v.$mode-top-bar-button-border-color-dark;
+		background-color: v.$mode-top-bar-button-background-color-dark;
+		color: v.$mode-top-bar-button-text-color-dark;
+	}
+
+	// Light/Dark mode -- TopBar search-bar -- background and text colors
+	.js-set-top-bar-search-bar-background-text-color-dark-mode-false {
+		background-color: v.$mode-top-bar-search-bar-background-color-light;
+		color: v.$mode-top-bar-search-bar-text-color-light;
+	}
+	.js-set-top-bar-search-bar-background-text-color-dark-mode-true {
+		background-color: v.$mode-top-bar-search-bar-background-color-dark;
+		color: v.$mode-top-bar-search-bar-text-color-dark;
 	}
 
 	// Light/Dark mode -- CreateItemSidebar component -- background colors
@@ -704,7 +728,7 @@ body {
 		}
 
 		&:focus + .name-centering-container__char-count-centering-container {
-			border-color: v.$theme-mode-blue-turkish-focus-border-color-light
+			border-color: v.$theme-mode-blue-turkish-focus-border-color-light;
 		}
 	}
 	.js-set-item-view-edit-item-info-form-name-input-focus-border-color-mode-dark-theme-blue-turkish {
